src/objects/Conduct__c.object
<CustomObject>
    <description>Action areas related to account plan</description>
    <fields>
        <fullName>Acct_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acct Plan</label>
        <referenceTo>SFDC_Acct_Plan__c</referenceTo>
        <relationshipName>Conducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activities__c</fullName>
        <inlineHelpText>How would you challenge the customers current solution? (activities and measurements)</inlineHelpText>
        <label>Activities</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resources__c</fullName>
        <inlineHelpText>What is required to reach the goals? (consequences if not)</inlineHelpText>
        <label>Resources</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Responsible__c</fullName>
        <inlineHelpText>Who is responsible? (follow up)</inlineHelpText>
        <label>Responsible</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Results__c</fullName>
        <inlineHelpText>What goals must be achieved? (specific goals)</inlineHelpText>
        <label>Results</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <inlineHelpText>When should the goals be achieved? (date/time)</inlineHelpText>
        <label>Time</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Action Area</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Conduct Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Areas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>